derive/tests/fail/04-inv-declared-co.stderr
error: lifetime may not live long enough
 --> tests/fail/04-inv-declared-co.rs:3:10
  |
3 | #[derive(Transient)]
  |          ^^^^^^^^^ function was supposed to return data with lifetime `'__long` but it is returning data with lifetime `'a`
4 | #[covariant(a)]
  |   --------- lifetime `'__long` defined here
5 | struct InvariantType<'a, T> {
  |                      -- lifetime `'a` defined here
  |
  = help: consider adding the following bound: `'a: '__long`
  = note: requirement occurs because of the type `InvariantType<'_, T>`, which makes the generic argument `'_` invariant
  = note: the struct `InvariantType<'a, T>` is invariant over the parameter `'a`
  = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
  = note: this error originates in the derive macro `Transient` (in Nightly builds, run with -Z macro-backtrace for more info)
